cmake_minimum_required (VERSION 3.24)

project(spffl_src)
add_subdirectory(base)
add_subdirectory(intmath)
add_subdirectory(bitrand)
add_subdirectory(bits)
add_subdirectory(containers)
add_subdirectory(polynomials)
add_subdirectory(rationals)
add_subdirectory(q_cyclo)
add_subdirectory(random)
add_subdirectory(factorization)
add_subdirectory(units)
add_subdirectory(list)
add_subdirectory(linalg)
add_subdirectory(cliparser)
